--- a/src/Components/Area/Area.module.sass
+++ b/src/Components/Area/Area.module.sass
@@ -1,6 +1,6 @@
-a
-  display: block
-  margin-left: 2rem
+// a
+//   display: block
+//   margin-left: 2rem
 .zero
   margin: 0
   margin-left: 2rem
