--- a/src/Pages/Index/Index.module.sass
+++ b/src/Pages/Index/Index.module.sass
@@ -1,12 +1,21 @@
+.imgContainer
+  img
+    width: 100%
+
+.sloganContainer
+  display: flex
+  padding: 1rem 2rem
+  align-items: center
+  div
+    flex: 1
+  .divider
+    height: 2px solid #333333
+  
 .input
   width: 20%
   margin: 0 auto
   input
     width: 60%
-.container 
-  display: flex
-  width: 80%
-  margin: 0 auto
 .card
   width: 30%
   margin: 2rem
