--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Akshar&family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
 
 html,
 body,
@@ -87,7 +87,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: "Akshar";
+  font-family: "Outfit";
   letter-spacing: 0.1rem;
 }
 /* HTML5 display-role reset for older browsers */
