style: index slogan color

--- a/src/Pages/Index/Index.module.sass
+++ b/src/Pages/Index/Index.module.sass
@@ -41,16 +41,13 @@
     height: 1px
     background-color: $gray
   
-// .input
-//   width: 20%
-//   margin: 0 auto
-//   input
-//     width: 60%
 .cardContainer
   display: flex
   justify-content: center
   > div
     display: flex
+    justify-content: center
+    flex-wrap: wrap
     a
       text-decoration: none
       margin: 0rem 1rem 2rem 1rem
