--- a/src/Components/Navbar/Navbar.module.sass
+++ b/src/Components/Navbar/Navbar.module.sass
@@ -1,6 +1,7 @@
-// @import 'styles/_variables.sass'
+@import 'styles/_variables.sass'
 
 .navber
+  background-color: $black
   display: flex
   justify-content: space-between
   align-items: center
@@ -10,14 +11,14 @@
   a
     text-decoration: none
   .logo
-    // color: $black
+    color: $black
     font-weight: bold
     font-size: 1.5rem
   .member
     font-size: 1rem
     font-weight: 500
     margin-right: 1rem
-    // color: $pink
+    color: $pink
     transition: 0.3s
     &:hover
       font-weight: bold
