--- a/styles/_variables.sass
+++ b/styles/_variables.sass
@@ -4,3 +4,9 @@ $purple: #7844E6
 $gray: #333333
 $pink: #e21937
 $light-black: #1f1f1f
+$light-gray: #C2C2C2
+
+@mixin h1
+  font-weight: bold
+  font-size: 28px
+
