--- a/src/Components/Navbar/Navbar.module.sass
+++ b/src/Components/Navbar/Navbar.module.sass
@@ -11,14 +11,14 @@
   a
     text-decoration: none
   .logo
-    color: $black
+    color: $white
     font-weight: bold
     font-size: 1.5rem
   .member
     font-size: 1rem
     font-weight: 500
     margin-right: 1rem
-    color: $pink
+    color: $purple
     transition: 0.3s
     &:hover
       font-weight: bold
