style: buy ticket process font size

--- a/src/Components/Seat/Seat.module.sass
+++ b/src/Components/Seat/Seat.module.sass
@@ -1,8 +1,7 @@
-.row
-  display: flex
-  p
-    margin: 0
-    margin-left: 2rem
-    width: 7rem
-  a
-    width: 7rem
+.seatContainer
+  .row
+    display: flex
+    p, a
+      margin: 0
+      margin-left: 2rem
+      width: 7rem
