--- a/src/Components/Area/Area.module.sass
+++ b/src/Components/Area/Area.module.sass
@@ -1,7 +1,7 @@
-// a
-//   display: block
-//   margin-left: 2rem
-.zero
-  margin: 0
-  margin-left: 2rem
+.areaContainer
+  font-size: 1.5rem
+  a
+    display: block
+  p, a
+    margin: 1rem 5rem
   
