fix: disable button when init for login & signup

--- a/src/Pages/Login/Login.module.sass
+++ b/src/Pages/Login/Login.module.sass
@@ -48,7 +48,7 @@
   p.error
     color: $red
   .reqError
-    margin-top: 1.5rem
+    margin: 1.5rem 0rem
     color: $red
   a
     text-decoration: none
