--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700&display=swap");
+@font-face {
+  font-family: "Outfit";
+  src: local("Outfit"), url("./fonts/Outfit-VariableFont_wght.ttf") format("truetype");
+}
 
 html,
 body,
