--- a/src/pages/EventDetail/EventDetail.module.sass
+++ b/src/pages/EventDetail/EventDetail.module.sass
@@ -59,6 +59,9 @@
     color: $white
     font-weight: 700
     font-size: 1.5rem
+.onSale
+  color: $white
+  padding: 1rem 9rem 3rem 9rem
 
 .sessionContainer
   padding: 1rem 8rem
@@ -108,6 +111,8 @@
         background-color: $purple
         padding: 0.6rem 1.8rem
         border-radius: 10px
+        &.disabled
+          opacity: 0.7
     &:not(:last-child)
       border-bottom: 1px solid $gray
     
