--- a/src/pages/BuyTicket/BuyTicket.module.sass
+++ b/src/pages/BuyTicket/BuyTicket.module.sass
@@ -1,3 +1,13 @@
+@import 'src/styles/_variables.sass'
+
+.buyTicket
+  background-color: $black
+  padding: 3rem 0rem
 .countdown
-  font-size: 2rem
-  margin-bottom: 3rem
+  text-align: center
+  margin: 5rem 0rem
+  h1
+    margin: 1rem 0rem
+    color: $purple
+    font-weight: 700
+    font-size: 18px
