--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -2,6 +2,7 @@ $white: #fff
 $black: #0D0D10
 $purple: #7844E6
 $gray: #333333
+$dark-gray: #292929
 $pink: #e21937
 $light-black: #1f1f1f
 $light-gray: #C2C2C2
