--- a/src/pages/BuyTicket/BuyTicket.module.sass
+++ b/src/pages/BuyTicket/BuyTicket.module.sass
@@ -2,7 +2,7 @@
 
 .buyTicket
   background-color: $black
-  padding: 3rem 0rem
+  padding: 3rem 0rem 7rem 0rem
 .countdown
   text-align: center
   margin: 5rem 0rem
