--- a/src/components/AreaPicture/AreaPicture.module.sass
+++ b/src/components/AreaPicture/AreaPicture.module.sass
@@ -1,3 +1,8 @@
+.container
+  display: flex
+  width: 70%
+  margin: 0 auto
 .picture
-  flex: 1
-  color: white
+  img
+    width: 85%
+    margin: 0 auto
