feat: move Area & Seat to AreaPicture

--- a/src/components/Area/Area.module.sass
+++ b/src/components/Area/Area.module.sass
@@ -4,6 +4,7 @@
   flex: 1
   p
     color: $white
+    margin: 0
   .priceContainer
     padding: 1rem
     .price
@@ -21,11 +22,13 @@
       display: block
       text-decoration: none
     .areaCard
+      cursor: pointer
       border-radius: 12px
       display: flex
       align-items: center
       padding: 0.5rem
       transition: 0.3s
+      margin-left: 2rem
       p
         font-size: 18px
       &:hover
