--- a/src/components/Order/Order.module.sass
+++ b/src/components/Order/Order.module.sass
@@ -1,2 +1,15 @@
+@import 'src/styles/_variables.sass'
+
 .text
   margin-left: 2rem
+.table
+  table
+    color: $white
+    width: 70%
+    margin: 0 auto
+  thead
+    background-color: $purple
+  tbody
+    background-color: $dark-gray
+  tr
+    border-color: $light-gray
