--- a/src/pages/Login/Login.module.sass
+++ b/src/pages/Login/Login.module.sass
@@ -9,10 +9,12 @@
 .card
   width: 40%
   h1
+    font-size: 18px
     color: $white
     background-color: $purple
     padding: 1rem
     text-align: center
+    margin-bottom: 0
 .form
   background-color: $white
   display: flex
