--- a/src/pages/Waiting/Waiting.module.sass
+++ b/src/pages/Waiting/Waiting.module.sass
@@ -1,4 +1,20 @@
+@import 'src/styles/_variables.sass'
+
 .waitContainer
+  height: 90%
+  background-color: $black
+  padding: 3rem 0rem
+  .container
+    width: 30%
+    margin: 0 auto
+    padding: 5rem 0rem
+    text-align: center
+  h1
+    font-size: 24px
+    margin-bottom: 2rem
   p
-    margin: 1rem
-    font-size: 1.5rem
+    font-size: 16px
+  h1, p
+    color: $white
+    .progress
+      margin-bottom: 3rem
