style: event detail onsale time

--- a/src/pages/EventDetail/EventDetail.module.sass
+++ b/src/pages/EventDetail/EventDetail.module.sass
@@ -39,6 +39,7 @@
     margin: 5rem 0rem
     width: 100%
     height: 30rem
+
 .concertContainer
   display: flex
   padding: 1rem 8rem
@@ -59,9 +60,23 @@
     color: $white
     font-weight: 700
     font-size: 1.5rem
-.onSale
-  color: $white
-  padding: 1rem 9rem 3rem 9rem
+
+.onSaleContainer
+  margin: 1rem 0rem
+  > div
+    width: 20%
+    margin: 0 auto
+    display: flex
+    > div
+      text-align: center
+      margin-right: 1.5rem
+      h1
+        color: $light-gray
+        font-size: 18px
+      p
+        color: $purple
+        font-size: 18px
+        font-weight: 700
 
 .sessionContainer
   padding: 1rem 8rem
