feat: add not login modal hint

--- a/src/pages/Profile/Profile.module.sass
+++ b/src/pages/Profile/Profile.module.sass
@@ -26,6 +26,21 @@
 .container
   width: 70%
   margin: 0 auto
+  button
+    cursor: pointer
+    width: max-content
+    font-size: 18px
+    margin-top: 1rem
+    color: $white
+    border: none
+    background-color: $purple
+    padding: 0.6rem 1.8rem
+    border-radius: 10px
+    width: 6rem
+    height: 3rem
+    display: flex
+    align-items: center
+    justify-content: center
   > h2
     color: $white
     font-size: 24px
