feat: add no orders hint

--- a/src/pages/Profile/Profile.module.sass
+++ b/src/pages/Profile/Profile.module.sass
@@ -3,6 +3,7 @@
 .profileContainer
   background-color: $black
   padding-bottom: 5rem
+  min-height: 90%
 .titleContainer
   display: flex
   align-items: center
@@ -26,6 +27,8 @@
 .container
   width: 70%
   margin: 0 auto
+  > p
+    color: $light-gray
   button
     cursor: pointer
     width: max-content
