feat: add progress bar calculation

--- a/src/components/AreaPicture/AreaPicture.module.sass
+++ b/src/components/AreaPicture/AreaPicture.module.sass
@@ -8,3 +8,9 @@
   img
     width: 95%
     margin: 0 auto
+
+@media(max-width:768px)
+  .container
+    display: block
+  .picture
+    margin-bottom: 2rem
