--- a/src/pages/BuyTicket/BuyTicket.module.sass
+++ b/src/pages/BuyTicket/BuyTicket.module.sass
@@ -5,9 +5,16 @@
   padding: 3rem 0rem 7rem 0rem
 .countdown
   text-align: center
-  margin: 5rem 0rem
+  margin: 3rem 0rem
   h1
     margin: 1rem 0rem
     color: $purple
     font-weight: 700
+    font-size: 18px
+.warning
+  width: 60%
+  margin: 0rem auto 4rem auto
+  color: $purple
+  p
+    margin: 0.5rem 0rem
     font-size: 18px
