feat: add select seat

--- a/src/components/Seat/Seat.module.sass
+++ b/src/components/Seat/Seat.module.sass
@@ -19,7 +19,7 @@
     > div
       display: flex
       align-items: center  
-      flex: 1
+      margin-right: 1rem
       p
         color: $white
         margin-left: 0.5rem
