feat: change left seat to white color

--- a/src/components/Area/Area.module.sass
+++ b/src/components/Area/Area.module.sass
@@ -37,10 +37,8 @@
         display: flex
         width: 100%
         justify-content: space-between
-        p:first-child
+        p
           color: $white
-        p:last-child
-          color: $purple
     .box
       width: 1.5rem
       height: 1.5rem
