--- a/src/components/AreaPicture/AreaPicture.module.sass
+++ b/src/components/AreaPicture/AreaPicture.module.sass
@@ -9,8 +9,10 @@
   img
     margin: 0 auto
 
-@media(max-width:768px)
+@media(max-width:1100px)
   .container
     display: block
   .picture
     margin-bottom: 2rem
+    margin-right: 0
+    width: unset
