feat: update warning text color

--- a/src/pages/BuyTicket/BuyTicket.module.sass
+++ b/src/pages/BuyTicket/BuyTicket.module.sass
@@ -10,11 +10,11 @@
     margin: 1rem 0rem
     color: $purple
     font-weight: 700
-    font-size: 18px
+    font-size: 20px
 .warning
   width: 60%
   margin: 0rem auto 4rem auto
-  color: $purple
+  color: $light-gray
   p
     margin: 0.5rem 0rem
     font-size: 18px
