feat: add warning before buy ticket

--- a/src/pages/EventDetail/EventDetail.module.sass
+++ b/src/pages/EventDetail/EventDetail.module.sass
@@ -141,6 +141,20 @@
   width: 20px
   height: 20px
   animation: spin 1s linear infinite
+.model
+  button
+    cursor: pointer
+    font-size: 16px
+    color: $white
+    border: none
+    width: unset
+    height: unset
+    padding: 0.6rem 1.8rem
+    border-radius: 10px
+  button:first-child
+    background-color: $blue
+  button:last-child
+    background-color: $purple
 
 @keyframes spin 
   0% 
