feat: limit clickable area to seat icon

--- a/src/components/Seat/Seat.module.sass
+++ b/src/components/Seat/Seat.module.sass
@@ -31,10 +31,11 @@
     .row
       display: flex
       justify-content: center
+      span
+        margin: 0.5rem 1rem 0.5rem 0rem
       svg
         width: 30px
         height: 30px
-        margin: 0.5rem 1rem 0.5rem 0rem
   .arrow
     cursor: pointer
     margin: 1.5rem 0rem
